k8s/booking-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: booking-service
  labels:
    app: booking
spec:
  selector:
    app: booking
  ports:
    - port: 3001
      targetPort: 3001
      protocol: TCP
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-deployment
  labels:
    app: booking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booking
  template:
    metadata:
      labels:
        app: booking
    spec:
      restartPolicy: Always
      containers:
      - name: booking
        image: ghcr.io/utland/cinema-api-booking:1
        command: ["node", "dist/apps/booking/main"]
        ports:
        - containerPort: 3001
          name: http
