k8s/catalog-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog-service
  namespace: cb
  labels:
    app: catalog
spec:
  selector:
    app: catalog
  ports:
    - port: 3003
      targetPort: 3003
      protocol: TCP
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-deployment
  namespace: cb
  labels:
    app: catalog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalog
  template:
    metadata:
      labels:
        app: catalog
    spec:
      restartPolicy: Always
      containers:
      - name: catalog
        image: ghcr.io/utland/cinema-api-catalog:1
        command: ["node", "dist/apps/catalog/main"]
        ports:
        - containerPort: 3003
          name: http
