k8s/identity-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: identity-service
  namespace: cb
  labels:
    app: identity
spec:
  selector:
    app: identity
  ports:
    - port: 3002
      targetPort: 3002
      protocol: TCP
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-deployment
  namespace: cb
  labels:
    app: identity
spec:
  replicas: 1
  selector:
    matchLabels:
      app: identity
  template:
    metadata:
      labels:
        app: identity
    spec:
      restartPolicy: Always
      containers:
      - name: identity
        image: ghcr.io/utland/cinema-api-identity:1
        command: ["node", "dist/apps/identity/main"]
        ports:
        - containerPort: 3002
          name: http
