k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cinema-ingress
  namespace: cb
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: cinema-booking.com
    http:
      paths:
      - path: /booking(/|$)(.*)
        pathType: ImplementationSpecific 
        backend:
          service:
            name: booking-service
            port:
              number: 3001
      - path: /identity(/|$)(.*)
        pathType: ImplementationSpecific 
        backend:
          service:
            name: identity-service
            port:
              number: 3002
      - path: /catalog(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: catalog-service
            port:
              number: 3003
      - path: /notifications(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: notifications-service
            port:
              number: 3004
